# pii-detector

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  backend.dockerfile  customer-start.sh  docker-compose.local.yml  local.Dockerfile  pyproject.toml  run_docker_scanner.sh  setup.cfg
app/: __init__.py  customer_worker.py  send_request.py  signal_handler.py
app/core/: config.py  regex_patterns.py  scheduler.py  sub_worker.py
app/schemas/: __init__.py  analyzer.py  bitbucket.py  common.py  data_classification.py  data_classifiers.py  documentdb.py  dynamodb.py  file_data.py  github.py  gitlab.py  instances.py  rds.py  redshift.py  s3.py  snowflake.py  trends_info.py
app/services/: aws_base_service.py  base_scan_service.py  base_service.py  bitbucket.py  data_analysis_service.py  documentdb.py  dynamodb.py  file_service.py  github.py  gitlab.py  hyperscan_service.py  mapper.py  mitie_service.py  rds_service.py  re2_service.py  re_service.py  redshift_service.py  s3_service.py  snowflake_service.py
app/services/utils/: custom_exceptions.py  disk_usage.py  encryptor.py  logger.py  mappings.py  sync_scheduler.py  token_refresher.py
app/worker_tasks/: multiprocessing_tasks.py  redis_jobs.py  redis_tasks.py
tests/: __init__.py  conftest.py
tests/services/: test_base_service.py  test_redshift_service.py  test_s3_service.py  test_snowflake_service.py
tests/test_data/pii_file_samples/: phi_sample_data.csv
tests/test_data/rsa_key_samples/: rsa_key_1.p8  rsa_key_1.pub
